Fix T57923: Freeze in mesh vnors computation code with some degenerated geometry.

Fix first part of it, the freeze itself being caused by float NAN values
never comparing equal to anything, not even themselves.